Fixed Logo being off centered

--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -40,7 +40,7 @@ html {
 }
 
 .right-margin {
-  margin-left: 500px;
+  margin-left: 270px;
 }
 
 .left-margin {
